--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
      </div>
         <div class="Log">
             <ul>
-            <li><a href="#">登录</a></li>
+            <li><a href="login.html">登录</a></li>
             <li>|</li>
-            <li><a href="#">注册</a></li>
+            <li><a href="registe.html">注册</a></li>
             </ul>
         </div>
         </div>
@@ -38,88 +38,88 @@
     <div class="all-top">
         <div class="main-left">
             <ul>
-              <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
-                  <ul>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                  </ul>
-              </li>
+                <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
+                    <ul>
+                        <li><img src="images/xm.png"><a href="#">魅族 16th</a></li>
+                        <li><img src="images/xm2.png"><a href="#">魅蓝 E3</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/mix3-80.png?width=80&height=80"><a href="#">小米MIX 3</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/qingchun-80.png?width=80&height=80"><a href="#">小米8青春版</a></li>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443260232/142_142_1539230426520mp.png"><a href="#">华为 Mate 20</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/heisha-80.png?width=80&height=80"><a href="#">黑鲨游戏手机</a></li>
+                    </ul>
+                </li>
 
-              <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
-                  <ul>
-                   <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                  </ul>
-              </li>
-              <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
-                   <ul>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                  </ul>
-              </li>
-              <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
-                   <ul>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                  </ul>
-              </li>
-              <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
-                   <ul>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                  </ul>
-              </li>
-              <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
-                   <ul>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                  </ul>
-              </li>
-              <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
-                   <ul>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                  </ul>
-              </li>
-              <li><a href="#">智能手机</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
-                   <ul>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                    <li><a href="#">魅族16th</a></li>
-                    <li><a href="#">小米6x</a></li>
-                  </ul>
-              </li>
-           </ul>
+                <li><a href="#">智能电视</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
+                    <ul>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/14000000000.png?width=80&height=80"><a href="#">投影电视</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/TV4A-32.png?width=80&height=80"><a href="#">小米电视机</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/4c-40.jpg?width=80&height=80"><a href="#">小米电视 4C</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/65yiti.jpg?width=80&height=80"><a href="#">小米电视 4S</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/TV4S-55Q.png?width=80&height=80"><a href="#">曲面电视</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/TV4S-50.png?width=80&height=80"><a href="#">海信 U7A</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">智能硬件</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
+                    <ul>
+                        <li><img src="https://i1.mifile.cn/f/i/g/2015/gif/kongqijinghuaqi.jpg"><a href="#">空气净化机</a></li>
+                        <li><img src="https://i1.mifile.cn/f/i/g/2015/xiaomijingshuiqi.jpg"><a href="#">净水器</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/saodijiqiren320-220.jpg"><a href="#">扫地机器人</a></li>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443192946/142_142_1542768064250mp.png"><a href="#">全景相机</a></li>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443207077/142_142_1542788291468mp.png"><a href="#">体重秤</a></li>
+                        <li><img src="https://storeimg.meizu.com/product/1467170145-52479.png@240x240.jpg"><a href="#">快充电源</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">平板电脑</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
+                    <ul>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/youxiben-80.jpg?width=80&height=80"><a href="#">小米游戏本</a></li>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443179152/142_142_1539767984482mp.png"><a href="#">华为 MateBook</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/bijiben80.jpg?width=80&height=80"><a href="#">小米笔记本</a></li>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443254323/142_142_1542266481382mp.png"><a href="#">华为儿童手表</a></li>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443223138/142_142_1542769691491mp.png"><a href="#">华为平板 M5</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/pingban2.jpg?width=80&height=80"><a href="#">小米平板4</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">智能配件</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
+                    <ul>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/shujuxian-80.jpg?width=80&height=80"><a href="#">数据线</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/chezaichongdianqi80.jpg?width=80&height=80"><a href="#">车充</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/wuxianchong80.jpg?width=80&height=80"><a href="#">无线充</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/chongdianqi-80.jpg?width=80&height=80"><a href="#">充电器</a></li>
+                        <li><img src="https://openfile.meizu.com/group1/M00/00/9C/Cix_s1gYZWCAc1jqAAGoLQ8h81w741.png@240x240.jpg"><a href="#">魅族盒子</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/heishashoubing80.jpg?width=80&height=80"><a href="#">黑鲨配件</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">出行工具</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
+                    <ul>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/shouhuan3.jpg?width=80&height=80"><a href="#">手环手表</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/VRyitiji80.jpg?width=80&height=80"><a href="#">VR</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/scooter-80.jpg?width=80&height=80"><a href="#">平衡车</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/mirror-80.jpg?width=80&height=80"><a href="#">智能后视镜</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/chezainibianqi80.jpg?width=80&height=80"><a href="#">车载逆变器</a></li>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443218530/142_142_1542771637212mp.png"><a href="#">补光自拍杆</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">耳机音箱</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
+                    <ul>
+                        <li><img src="https://openfile.meizu.com/group1/M00/06/20/Cgbj0Ft-WkOAAhCKAAFqcNe6c3M482.png@240x240.jpg"><a href="#">魅族EP-31耳机</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/80xiangquan.jpg?width=80&height=80"><a href="#">蓝牙耳机</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/toudai80.jpg?width=80&height=80"><a href="#">头戴耳机</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/800-800-3.jpg?width=80&height=80"><a href="#">蓝牙音箱</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/xiaoai.jpg?width=80&height=80"><a href="#">小米AI音箱</a></li>
+                        <li><img src="https://openfile.meizu.com/group1/M00/05/11/Cgbj0Fsp-8yATCDFAASWKnb1fdQ339.png@240x240.jpg"><a href="#">POP 耳机</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">智能家居</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="images/jt.png">
+                    <ul>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443135929/142_142_1539569068557mp.png"><a href="#">华为子母路由器</a></li>
+                        <li><img src="https://res.vmallres.com/pimages//product/6901443249282/142_142_1542787558155mp.png"><a href="#">随身wifi</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/wurenji80.jpg?width=80&height=80"><a href="#">无人机</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/camera-head-80.jpg?width=80&height=80"><a href="#">摄像机</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/duijiangji.jpg?width=80&height=80"><a href="#">对讲机</a></li>
+                        <li><img src="http://i1.mifile.cn/f/i/g/2015/cn-index/camera-small-80.jpg?width=80&height=80"><a href="#">照相机</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <!--轮播图开始-->
         <div id="LBT">
@@ -343,12 +343,12 @@
     <!-- 了解我们开始 -->
     <div class="copyright">
       <ul>
-        <li><a href="#">了解我们&nbsp&nbsp&nbsp&nbsp|</a></li>
-        <li><a href="#">了解我们&nbsp&nbsp&nbsp&nbsp|</a></li>
-        <li><a href="#">了解我们&nbsp&nbsp&nbsp&nbsp|</a></li>
-        <li><a href="#">了解我们&nbsp&nbsp&nbsp&nbsp|</a></li>
-        <li><a href="#">了解我们&nbsp&nbsp&nbsp&nbsp|</a></li>
-        <li><a href="#">了解我们</a></li>
+        <li><a href="#">隐私政策&nbsp&nbsp&nbsp&nbsp|</a></li>
+        <li><a href="#">问题反馈&nbsp&nbsp&nbsp&nbsp|</a></li>
+        <li><a href="#">政企服务&nbsp&nbsp&nbsp&nbsp|</a></li>
+        <li><a href="#">友情链接&nbsp&nbsp&nbsp&nbsp|</a></li>
+        <li><a href="#">关注我们&nbsp&nbsp&nbsp&nbsp|</a></li>
+        <li><a href="#">关于我们</a></li>
       </ul>
     </div>
     <!-- 了解我们结束 -->
