--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
     <!--  新机型优惠展示开始 -->
     <div class="layout">
             <div class="layout-margin">
-              <a href="#"><div id="P1"></div></a>
-              <a href="#"><div id="P2"></div></a>
-              <a href="#"><div id="P3"></div></a>
-              <a href="#"><div id="P4"></div></a>
+              <a href="list.html?img=01&title=Huawei/华为 P20 全面屏刘海屏双摄麒麟970芯片&price=¥ 3388.00-3888.00"><div id="P1"></div></a>
+              <a href="list.html?img=p20&title=Huawei/华为 Mate 20 Pro 全面屏mate20pro麒麟980&price=¥ 5899.00-7659.00"><div id="P2"></div></a>
+              <a href="list.html?img=xm8&title=Xiaomi/小米 小米8 青春版全面屏智能拍照游戏手机&price=¥ 1399.00-1999.00"><div id="P3"></div></a>
+              <a href="list.html?img=xmsh&title=小米手环3代智能运动心率社交娱乐来电通话提醒蓝牙&price=¥ 169.00"><div id="P4"></div></a>
             </div>
-        </div>
+    </div>
     <!--  新机型优惠展示结束 -->
 
     <!-- 黑鲨手机logo开始 -->
@@ -260,24 +260,24 @@
     </div>
     <div class="Meizu-all">
     <div class="Meizu">
-         <a href="#"><div class="Meizu-p1"></div></a>
-         <a href="#"><div class="Meizu-p2"></div></a>
+         <a href="list.html?img=mz16th&title=Meizu/魅族 16th骁龙845 超窄边框全面屏 屏下指纹解锁&price=¥ 2698.00-3298.00"><div class="Meizu-p1"></div></a>
+         <a href="list.html?img=mz16x&title=Meizu/魅族 16 x手机官方旗舰店x8不加价现货&price=¥ 2198.00-2398.00"><div class="Meizu-p2"></div></a>
      </div>
     </div>
     <div class="MI-all">
      <div class="MI">
-        <a href="#"><div class="MI-1"></div></a>
-        <a href="#"><div class="MI-2"></div></a>
-        <a href="#"><div class="MI-3"></div></a>
-        <a href="#"><div class="MI-4"></div></a>
+        <a href="list.html?img=xmse&title=Xiaomi/小米 小米8SE全面屏拍照游戏智能手机学生机商务机8周年&price=¥ 1799.00 "><div class="MI-1"></div></a>
+        <a href="list.html?img=xmmlx2&title=Xiaomi/小米 小米mix 2全面屏5.99英寸128G拍照手机&price=¥ 2099.00-2659.00"><div class="MI-2"></div></a>
+        <a href="list.html?img=mz16x&title=Meizu/魅族 16 x手机官方旗舰店x8不加价现货&price=¥ 2198.00-2398.00"><div class="MI-3"></div></a>
+        <a href="list.html?img=01&title=Huawei/华为 P20 全面屏刘海屏双摄麒麟970芯片&price=¥ 3388.00-3888.00"><div class="MI-4"></div></a>
      </div>
     </div>
     <div class="MI-top">
      <div class="MI2">
-        <a href="#"><div class="MI-11"></div></a>
-        <a href="#"><div class="MI-22"></div></a>
-        <a href="#"><div class="MI-33"></div></a>
-        <a href="#"><div class="MI-44"></div></a>
+        <a href="list.html?img=mz16th&title=Meizu/魅族 16th骁龙845 超窄边框全面屏 屏下指纹解锁&price=¥ 2698.00-3298.00"><div class="MI-11"></div></a>
+        <a href="list.html?img=xm6x&title=Xiaomi/小米 6X智能AI双摄拍照学生老人青春手机小米8&price=¥ 1299.00-1649.00"><div class="MI-22"></div></a>
+        <a href="list.html?img=mz16th&title=Meizu/魅族 16th骁龙845 超窄边框全面屏 屏下指纹解锁&price=¥ 2698.00-3298.00"><div class="MI-33"></div></a>
+        <a href="list.html?img=xmse&title=Xiaomi/小米 小米8SE全面屏拍照游戏智能手机学生机商务机8周年&price=¥ 1799.00 "><div class="MI-44"></div></a>
      </div>
     </div>
     <div class="GD">
@@ -299,17 +299,17 @@
     </div>
     <div class="computer-all">
       <div class="computer-center">
-           <a href="#"><div class="computer-1"></div></a>
+           <a href="list.html?img=xmmix3&title=Xiaomi/小米 小米MIX 3滑盖全面屏手机5G&price=¥ 3529.00-4169.00"><div class="computer-1"></div></a>
                <div class="computer-2">
                    <div class="computer-2-top">
-                       <a href="#"><div class="computer-2-top-1"></div></a>
-                       <a href="#"><div class="computer-2-top-2"></div></a>
-                       <a href="#"><div class="computer-2-top-3"></div></a>
+                       <a href="list.html?img=xmpay&title=Xiaomi/小米 笔记本Pro 15.6英寸轻薄便携学生游戏电脑笔记本&price=¥ 5599.00"><div class="computer-2-top-1"></div></a>
+                       <a href="list.html?img=hwmb&title=honor/荣耀 magicbook R5+8G+256G锐龙版AMD笔记本电脑 高性能金属轻薄本集成显卡&price=¥ 3999.00-4599.00"><div class="computer-2-top-2"></div></a>
+                       <a href="list.html?img=xm8se&title=Xiaomi/小米 小米笔记本15.6吋 I5 8G轻薄独显便携学生商务办公电脑Office官方正品超薄国民青春本Ruby红米本&price=¥ 4499.00"><div class="computer-2-top-3"></div></a>
                    </div>
                    <div class="computer-2-bottom">
-                      <a href="#"><div class="computer-2-bottom-1"></div></a>
-                      <a href="#"><div class="computer-2-bottom-2"></div></a>
-                      <a href="#"><div class="computer-2-bottom-3"></div></a>
+                      <a href="list.html?img=xm8se&title=Xiaomi/小米 小米笔记本15.6吋 I5 8G轻薄独显便携学生商务办公电脑Office官方正品超薄国民青春本Ruby红米本&price=¥ 4499.00"><div class="computer-2-bottom-1"></div></a>
+                      <a href="list.html?img=xm8se&title=Xiaomi/小米 小米笔记本15.6吋 I5 8G轻薄独显便携学生商务办公电脑Office官方正品超薄国民青春本Ruby红米本&price=¥ 4499.00"><div class="computer-2-bottom-2"></div></a>
+                      <a href="list.html?img=lx&title=Lenovo/联想 小新 潮7000 15.6英寸笔记本电脑2018款小新潮7000独显四核&price=¥ 4739.00-5599.00"><div class="computer-2-bottom-3"></div></a>
                    </div>
                </div>
        </div>
@@ -393,5 +393,5 @@
     <!-- fixed定位图标结 -->
 
 </body>
-
+<script src="js/getUrlParam.js"></script>
 </html>
